backend/src/main/java/com/example/grannfix/common/errors/ConflictException.java
package com.example.grannfix.common.errors;

public class ConflictException extends RuntimeException {
    public ConflictException(String message) { super(message); }
}